<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/bg_api_view"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Get status of zkbnb"
        android:id="@+id/tvApiDesc"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:id="@+id/viewParams"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Execute"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:id="@+id/btnExecute"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        android:id="@+id/progressBar"/>

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Execute API to see response"/>
</LinearLayout>